# grist-jupyterlite-2

./: README.md  USAGE.md  jupyter-lite.json  main.py  package.json  package.sh  pyproject.toml  requirements.txt  run.sh
.github/workflows/: deploy.yml
extension/: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  install.json  package.json  pyproject.toml
extension/.github/workflows/: build.yml  check-release.yml
extension/grist_jupyterlite_2/: __init__.py
extension/src/: index.ts  initKernelPy.ts
extension/src/__tests__/: grist_jupyterlite_2.spec.ts
extension/ui-tests/: package.json
extension/ui-tests/tests/: grist_jupyterlite_2.spec.ts
jupyter_grist_api/: MANIFEST.in  pyproject.toml
jupyter_grist_api/grist/: __init__.py
jupyter_grist_api/grist/browser/: api.py  callbacks.py  comlink.py
tests/: conftest.py  test_moment.py
